PROD_10-24-19/force-app/main/default/objects/Brookfield_Asset__c/fields/Asset_Region__c.field-meta.xml
<CustomField>
    <fullName>Asset_Region__c</fullName>
    <label>Asset Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New England</fullName>
            </value>
            <value>
                <fullName>PJM</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Minnesota</fullName>
            </value>
            <value>
                <fullName>Louisiana</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>MISO</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>