PROD_10-24-19/force-app/main/default/objects/Brookfield_Asset__c/fields/Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lookup__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Lookup</label>
    <length>3</length>
    <type>Text</type>
</CustomField>