PROD_10-24-19/force-app/main/default/objects/Brookfield_Asset__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Biomass</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Thermal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>