PROD_10-24-19/force-app/main/default/objects/Brookfield_Asset__c/fields/State_Prov__c.field-meta.xml
<CustomField>
    <fullName>State_Prov__c</fullName>
    <label>State/Prov</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Prov</valueSetName>
    </valueSet>
</CustomField>