PROD_10-24-19/force-app/main/default/objects/Brookfield_Asset__c/recordTypes/Energy.recordType-meta.xml
<RecordType>
    <fullName>Energy</fullName>
    <active>true</active>
    <label>Energy</label>
</RecordType>