PROD_10-24-19/force-app/main/default/objects/Brookfield_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Region__c</columns>
    <columns>Asset_Capacity_MW__c</columns>
    <columns>Country__c</columns>
    <columns>Sector__c</columns>
    <columns>State_Prov__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Brookfield_Asset__c.Energy</value>
    </filters>
    <label>All</label>
</ListView>